[project]
name = "tradebox"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.4",
    "requests>=2.32.3",
    "pydantic-settings>=2.3.3",
    "binance-futures-connector>=4.0.0",
    "sqlmodel>=0.0.20",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.3",
    "asyncio>=3.4.3",
    "prefect>=2.20.3,<3.0",
    "tqdm>=4.66.4",
    "sqladmin>=0.18.0",
    "click>=8.1.7",
    "alembic>=1.13.2",
    "asyncpg>=0.30.0",
    "sentry-sdk[fastapi]>=2.10",
    "psycopg2>=2.9.9",
    "python-binance>=1.0.19",
    "unicorn-binance-websocket-api>=2.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
]
